--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,36 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  input[type="range"]::-webkit-slider-thumb {
+    @apply appearance-none w-5 h-10 -m-2 bg-yellow-600 rounded-md cursor-pointer shadow-sm;
+  }
+  input[type="range"]::-moz-range-thumb {
+    @apply appearance-none w-5 h-10 bg-yellow-600 rounded-md cursor-pointer;
+  }
+  input[type="range"]::-webkit-slider-runnable-track {
+    @apply w-full h-6 bg-transparent;
+    background: radial-gradient(
+      circle at 0% -1200%,
+      transparent,
+      transparent 90%,
+      #eee 90%,
+      #eee 100%
+    );
+  }
+  input[type="range"]::-moz-range-track {
+    @apply w-full h-6 bg-gray-300;
+    background: radial-gradient(
+      circle at 0% -1200%,
+      transparent,
+      transparent 90%,
+      #eee 90%,
+      #eee 100%
+    );
+  }
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -36,25 +66,6 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
 @media (prefers-color-scheme: light) {
